# arma

./: .gitignore  .travis.yml  CONTRIBUTING.md  Doxyfile  README.md  acf_8hh.html  acf_8hh__dep__incl.map  acf_8hh__dep__incl.md5  acf_8hh__incl.map  acf_8hh__incl.md5  acf_8hh_source.html  acf__generator_8cc.html  acf__generator_8cc__incl.map  acf__generator_8cc__incl.md5  acf__generator_8hh.html  acf__generator_8hh__dep__incl.map  acf__generator_8hh__dep__incl.md5  acf__generator_8hh__incl.map  acf__generator_8hh__incl.md5  acf__generator_8hh_source.html  acf__wrapper_8cc.html  acf__wrapper_8cc__incl.map  acf__wrapper_8cc__incl.md5  acf__wrapper_8hh.html  acf__wrapper_8hh__dep__incl.map  acf__wrapper_8hh__dep__incl.md5  acf__wrapper_8hh__incl.map  acf__wrapper_8hh__incl.md5  acf__wrapper_8hh_source.html  annotated.html  apmath_2fourier__gsl_8hh.html  apmath_2fourier__gsl_8hh__dep__incl.map  apmath_2fourier__gsl_8hh__dep__incl.md5  apmath_2fourier__gsl_8hh__incl.map  apmath_2fourier__gsl_8hh__incl.md5  apmath_2fourier__gsl_8hh_source.html  apmath_2polynomial_8hh.html  apmath_2polynomial_8hh__dep__incl.map  apmath_2polynomial_8hh__dep__incl.md5  apmath_2polynomial_8hh__incl.map  (+1933 more)
deploy/: arma-id-rsa.enc  cibuild  cideploy
doc/: layout.xml  refs.bib
input/: arma.arma  autoreg.model  high_amp_wave.arma  input.autoreg  nit-propagating-gramcharlier  nit-propagating-none  nit-propagating-skewnormal  nit-standing-gramcharlier  nit-standing-none  nit-standing-skewnormal  opencl.conf  plain_wave.arma  plain_wave_lh.arma  propagating-wave-slice.arma  propagating_wave.arma  propagating_wave.autoreg  standing_wave.arma  standing_wave_realtime.arma  template.arma  test-linear  test-nonlinear  test-propagating-linear  test-propagating-nonlinear
scripts/: copy-input-files  generate-docs  target-archive  target-graphs  target-nit  target-nit.R  target-nonlinear  target-nonlinear.R  target-propagating-wave-slice.R  target-velocity.R
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+147 more)
src/: .clang-format  Doxyfile  Makefile  README.md  acf.hh  ar_model.hh  arma.cc  arma.hh  arma_driver.cc  arma_driver.hh  arma_main.cc  arma_model.hh  arma_realtime.cc  arma_realtime_driver.cc  arma_realtime_driver.hh  autoreg  autoreg.cc  autoreg.hh  autoreg.model  autoreg_driver.hh  blitz.hh  cholesky-test.cc  chop.cc  chop.hh  common_main.hh  config.hh  config.hh.in  dcmt-test.cc  dcmt.cc  derivative.hh  discrete_function.hh  distribution.hh  domain-test.cc  domain.hh  emath.hh  errors.hh  factor_waves.cc  factor_waves.hh  fourier.hh  grid-test.cc  (+57 more)
src/apmath/: closed_interval.cc  closed_interval.hh  convolution.hh  delaunay_interpolation.cc  factorial.hh  fourier_direction.hh  fourier_gsl.hh  fourier_opencl.cc  fourier_opencl.hh  hermite.cc  hermite.hh  meson.build  owen_t.cc  owen_t.hh  polynomial.cc  polynomial.hh
src/bits/: acf_wrapper.cc  acf_wrapper.hh  bscheduler_io.hh  byte_swap.hh  const_char.hh  fourier_gsl.hh  index.hh  meson.build  object_wrapper.hh  transform_wrapper.hh  write_csv.hh
src/generator/: acf_generator.cc  acf_generator.hh  ar_algorithm.cc  ar_algorithm.hh  ar_generator.cc  ar_generator.hh  ar_model.cc  ar_model.hh  ar_model_bscheduler.cc  ar_model_opencl.cc  ar_model_parallel.cc  ar_model_sequential.cc  ar_model_surf.cc  ar_model_wn.cc  arma_generator.cc  arma_generator.hh  arma_model.cc  arma_model.hh  basic_arma_model.cc  basic_arma_model.hh  basic_arma_model_parallel.cc  basic_arma_model_sequential.cc  basic_arma_model_verify.cc  basic_generator.hh  basic_model.cc  basic_model.hh  lh_generator.cc  lh_generator.hh  lh_model.cc  lh_model.hh  lh_model_opencl.cc  ma_coefficient_solver.cc  ma_coefficient_solver.hh  ma_generator.cc  ma_generator.hh  ma_model.cc  ma_model.hh  ma_root_solver.cc  ma_root_solver.hh  meson.build  (+9 more)
src/imgui/: imgui_sdl.cpp  imgui_sdl.h  meson.build
src/io/: binary_stream.hh
src/kernels/: ar_generate_surface.cl  common.h  compute_second_function.cl  compute_window_function.cl  create_vector_field.cl  harts.h  interpolate_window_function.cl  interpolation_polynomial.cl  lh_generate_surface.cl  multiply_functions.cl  transform_data_gram_charlier.cl
src/models/: model.hh  plain_wave.hh
src/nonlinear/: equations.hh  meson.build  nit_transform.cc  nit_transform.hh  series.cc  series.hh  transforms.hh
src/opencl/: array.hh  buffer.hh  cl.hh  device_type.cc  device_type.hh  get_opencl_error_string.cc  gl_object_guard.cc  gl_object_guard.hh  kernel.cc  kernel.hh  meson.build  opencl.cc  opencl.hh  vec.hh
src/stats/: distribution.cc  distribution.hh  gaussian.cc  gaussian.hh  gram_charlier.cc  gram_charlier.hh  meson.build  qq_graph.cc  qq_graph.hh  skew_normal.cc  skew_normal.hh  statistics.hh  summary.cc  summary.hh  waves.cc  waves.hh  weibull.hh
src/test/: acf-generator-test.cc  arma_environment.cc  arma_environment.hh  arma_test_main.cc  auto-covariance-test.cc  closed-interval-test.cc  convolution-test.cc  dcmt-test.cc  derivatives-test.cc  factor-waves-test.cc  factorial-test.cc  fourier-test.cc  grid-test.cc  linalg-test.cc  ma-coefficient-solver-test.cc  meson.build  output-flags-test.cc  owen-t-test.cc  polynomial-test.cc  polynomial.hh  skew-normal-test.cc  yule-walker-test.cc
src/utility/: const_char.hh
src/velocity/: basic_solver.cc  basic_solver.hh  delaunay_interpolation.hh  high_amplitude_realtime_solver.cc  high_amplitude_realtime_solver.hh  high_amplitude_realtime_solver_opencl.cc  high_amplitude_solver.cc  high_amplitude_solver.hh  high_amplitude_velocity_potential_field.hh  linear_solver.cc  linear_solver.hh  linear_velocity_potential_field.hh  meson.build  plain_wave_solver.cc  plain_wave_solver.hh  plain_wave_velocity_field.hh  small_amplitude_solver.cc  small_amplitude_solver.hh  velocity_potential_field.hh
src/velocity/small_amplitude_solver/: integrals.hh  linear_interpolation.cc  linear_interpolation.hh  pressure.hh  wave.cc  wave.hh
