option(
	'framework',
	type: 'combo',
	choices: ['none', 'openmp', 'opencl', 'mpi'],
	value: 'none'
)

option(
	'noseed',
	type: 'boolean',
	value: false
)

option(
	'with_small_amplitude_solver',
	type: 'boolean',
	value: false
)

option(
	'with_high_amplitude_realtime_solver',
	type: 'boolean',
	value: false
)

option(
	'real_type',
	type: 'combo',
	choices: ['float', 'double'],
	value: 'double'
)

option(
	'profile',
	type: 'boolean',
	value: false
)
