option(
	'framework',
	type: 'combo',
	choices: ['none', 'openmp', 'opencl', 'bscheduler'],
	value: 'none'
)

option(
	'with_small_amplitude_solver',
	type: 'boolean',
	value: false
)

option(
	'with_high_amplitude_realtime_solver',
	type: 'boolean',
	value: false
)

option(
	'real_type',
	type: 'combo',
	choices: ['float', 'double'],
	value: 'double'
)

option(
	'profile',
	type: 'boolean',
	value: false
)

option(
	'simulate_failures',
	type: 'boolean',
	value: false
)

option(
	'opencl_srcdir',
	type: 'string',
	value: '',
	description: 'path to OpenCL kernels source code'
)

option(
	'blas',
	type: 'combo',
	value: 'openblas',
	choices: ['openblas', 'mkl'],
	description: 'basic linear algebra library'
)

option(
	'lapack',
	type: 'combo',
	value: 'netlib',
	choices: ['netlib', 'mkl'],
	description: 'linear algebra library'
)
